fix: resolve select box picker icon alignment issue

--- a/apps/style/src/components/ui/_select.scss
+++ b/apps/style/src/components/ui/_select.scss
@@ -2,6 +2,7 @@
 
 @mixin select-base {
   appearance: base-select;
+  display: flex;
   border: 1px solid var(--input);
   border-radius: var(--radius-md);
   background: transparent;
@@ -34,7 +35,6 @@
     transition: 0.4s rotate;
     content: "";
     width: s(4);
-    height: s(4.5);
     @include icon("caret-down-bold", "bold");
   }
 
